Added failure points for test
Changed to Java 11 file read